# graph-of-convex-set-optimization-fixed-wing

./: .gitignore  FixedWing.py  FlatnessInverter.py  GcsTrajectoryUtils.py  GeometryUtils.py  IrisUtils.py  PerchingPlane.py  README.md  Simulation.py  TestLQR.py  irisCliqueCover.py  main.py  notes.txt
DeltaWingModel/: CMakeLists.txt  package.xml
DeltaWingModel/meshes/: right_elevon.STL  right_motor.STL
DeltaWingModel/urdf/: DeltaWing.csv  DeltaWing.urdf
DeltatWinURDF/: package.xml
DeltatWinURDF/config/: joint_names_DeltatWinURDF.yaml
DeltatWinURDF/launch/: display.launch  gazebo.launch
DeltatWinURDF/meshes/: base_link.STL  left_elevon.STL  left_motor.STL
DeltatWinURDF/urdf/: DeltatWinURDF.urdf
NoteBooks/: Basic_iris_functionality.ipynb  TestBlock.ipynb  decomposition.ipynb  deltaWingTest.ipynb  taskspace_iris.ipynb  testFlatOutputs.ipynb
models/: obstacles.urdf  obstacles_house_formation.urdf  obstacles_house_formation_Large.urdf
videos/: untar_and_create_video.sh
