<package format="2">
  <name>DeltaWingModel</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for DeltaWingModel</p>
    <p>This package contains configuration data, 3D models and launch files
for DeltaWingModel robot</p>
  </description>
  <author>Steve Carter Feujo Nomeny</author>
  <maintainer email="steve.carter668@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>